# template-starpu

./: .devcontainer.json  CMakeLists.txt  README.md
src/: main.c
